--- a/package.json
+++ b/package.json
@@ -1,40 +1,37 @@
 {
-  "name": "hardhat-project",
-  "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.5",
-    "@nomiclabs/hardhat-etherscan": "^3.0.3",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "@typechain/ethers-v5": "^7.2.0",
-    "@typechain/hardhat": "^2.3.1",
-    "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.1.0",
-    "@types/node": "^12.20.47",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "chai": "^4.3.6",
-    "dotenv": "^10.0.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-promise": "^5.2.0",
-    "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.2",
-    "hardhat": "^2.9.2",
-    "hardhat-gas-reporter": "^1.0.8",
-    "prettier": "^2.6.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.13",
-    "solhint": "^3.3.7",
-    "solidity-coverage": "^0.7.20",
-    "ts-node": "^10.7.0",
-    "typechain": "^5.2.0",
-    "typescript": "^4.6.3"
+  "name": "lottery",
+  "version": "1.0.0",
+  "description": "Lottery contracts",
+  "private": true,
+  "author": "Huy",
+  "license": "MIT",
+  "scripts": {
+    "compile": "npx hardhat compile",
+    "test": "npx hardhat test"
   },
-  "dependencies": {
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-truffle5": "^2.0.0",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/test-helpers": "^0.5.11",
+    "@pancakeswap/eslint-config-pancake": "^1.2.0",
+    "@types/chai": "^4.2.21",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^14.14.35",
+    "chai": "^4.2.0",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.22.0",
+    "ethereum-waffle": "^3.2.1",
+    "ethers": "^5.0.23",
+    "hardhat": "^2.4.1",
+    "hardhat-abi-exporter": "2.0.6",
+    "hardhat-contract-sizer": "^2.0.2",
+    "hardhat-watcher": "^2.1.1",
+    "solidity-coverage": "^0.7.13",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3",
+    "web3": "^1.3.6",
     "@chainlink/contracts": "0.1.7",
-    "@openzeppelin/contracts": "^4.2.0",
-    "@openzeppelin/test-helpers": "^0.5.15"
+    "@openzeppelin/contracts": "^4.2.0"
   }
 }
